--- a/HTML/p13_anisul_project.html
+++ b/HTML/p13_anisul_project.html
@@ -19,11 +19,11 @@
 </head>
 <body>
     <h1 align="center">Study with Tanmoy</h1>
-    <img src="/Images/photo_2024-01-15_03-19-16.jpg" alt="tanmoys photo" height="150" class="center">
+    <img src="/HTML_CSS_Course/Images/photo_2024-01-15_03-19-16.jpg" alt="tanmoys photo" height="150" class="center">
     <br>
     <hr>
 
-    <iframe src="http://127.0.0.1:5500/p12.html?first+name=&lastname=&dob=&enamil=&password=&gender=on&region=on&photo=&depertment=PME&comment=" frameborder="1" width="700px" height="600px">
+    <iframe src="/HTML_CSS_Course/HTML/p12.html" frameborder="1" width="700px" height="600px">
 
     </iframe>
 
@@ -107,8 +107,8 @@
     </form>
     <br><br>
     <hr>
-    <video src="/Video/[Moonknight] - A man without love.mpv4" controls height="360px" width="600px">Your browser doesnot support the video</video>
-    <audio src="/Songs/Gemini - The Soundlings.mp3" controls>audio not supported</audio>
+    <video src="/HTML_CSS_Course/Video/[Moonknight] - A man without love.mp4" controls height="360px" width="600px">Your browser doesnot support the video</video>
+    <audio src="/HTML_CSS_Course/Songs/Gemini - The Soundlings.mp3" controls>audio not supported</audio>
     <hr>
     <ol>
         <li><a href="https://www.facebook.com/tanmoy.kumar.106/">My facebook profile</a></li>
